# event-link

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  etup and first migration"  event-link-db-structure.txt  start.bat
.github/workflows/: ci.yml
backend/: .gitignore  .topsecret.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_cover_attended.py  0002_add_event_indexes.py  0004_org_profile_publish_favorites.py
backend/app/: api.py  auth.py  config.py  database.py  email_service.py  email_templates.py  logging_utils.py  models.py  schemas.py
backend/tests/: test_api.py
loadtests/: events.js
ui/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json  playwright.config.ts
ui/e2e/: auth.spec.ts  events.spec.ts
ui/src/: index.html  styles.scss
ui/src/app/: api-tokens.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  i18n.ts  models.ts
ui/src/app/event-details/: event-details.component.html  event-details.component.scss  event-details.component.ts
ui/src/app/event-form/: event-form.component.html  event-form.component.scss  event-form.component.ts
ui/src/app/event-list/: event-list.component.html  event-list.component.scss  event-list.component.spec.ts  event-list.component.ts
ui/src/app/favorites/: favorites.component.html  favorites.component.scss  (+1 more)
ui/src/environments/: environment.prod.ts  environment.ts
(+38 files in other folders)
